--- a/blogpage.html
+++ b/blogpage.html
@@ -9,9 +9,9 @@
             <h1>Healthy Living and Wellness</h1>
         </header>
 
-        <section class="grid">
+        <section class="container">
             <!-- Nutrition and Diet -->
-            <section class="item">
+            <section class="item1">
                 <h2>Nutrition and Diet</h2>
                 <img src="./Assets/nutrition.jpg" alt="Nutrition and Diet">
                 <p>Proper nutrition and a balanced diet are crucial for overall health and wellness. Nutrient-rich foods provide energy, support bodily functions, and boost the immune system, reducing the risk of chronic illnesses. Healthy eating habits also enhance mental clarity, mood, and quality of sleep. By making mindful dietary choices, individuals invest in their long-term well-being, leading to a happier and more vibrant life.</p>
@@ -22,30 +22,48 @@
             <section class="item">
                 <h2>Fitness and Exercise</h2>
                 <img src="./Assets/fitness.png" alt="Fitness and Exercise">
+                <p>Regular exercise is essential for overall health and wellness. It strengthens the body, supports mental health, and reduces the risk of chronic diseases. Exercise boosts mood, improves sleep, and enhances overall quality of life, leading to a more active and fulfilling existence.</p>
             </section>
 
             <!-- Mental Health and Mindfulness -->
             <section class="item">
                 <h2>Mental Health and Mindfulness</h2>
-                <img src="./Assets/mental.jpg" alt="Mental Health and Mindfulness"
+                <img src="./Assets/mental.jpg" alt="Mental Health and Mindfulness">
+                <p>Mental health and mindfulness are essential for overall well-being. Practicing mindfulness reduces stress and enhances emotional stability. Prioritizing mental health fosters resilience, improves relationships, and leads to a more content and fulfilling life.</p>
             </section>
 
             <!-- Lifestyle and Wellness -->
             <section class="item">
                 <h2>Lifestyle and Wellness</h2>
                 <img src="./Assets/lifestyle.jpeg" alt="Lifestyle and Wellness">
+                <ol>
+                    <li>Balanced Nutrition</li>
+                    <li>Regular Exercise</li>
+                    <li>Adequate Sleep</li>
+                    <li>Stress Management</li>
+                    <li>Social Connections</li>
+                    <li>Avoiding Harmful Substances</li>
+                    <li>Holistic Approach</li>
+                </ol>
             </section>
 
             <!-- Preventive Health -->
             <section class="item">
                 <h2>Preventive Health</h2>
                 <img src="./Assets/health.jpg" alt="Preventive Health">
+                <p>Preventive health is crucial for a vibrant life. Regular check-ups and healthy habits detect and prevent diseases, ensuring effective treatment. It saves lives, enhances well-being, and promotes longevity, empowering individuals to lead fulfilling, active lives.</p>
             </section>
 
             <!-- Natural Remedies and Alternative Therapies -->
             <section class="item">
                 <h2>Natural Remedies and Alternative Therapies</h2>
                 <img src="./Assets/natural.webp" alt="Natural Remedies and Alternative Therapies">
+                <ul>
+                    <li>Promotion of Natural Healing</li>
+                    <li>Individualized Treatments</li>
+                    <li>Mind-Body Connection</li>
+                    <li>Pain Management</li>
+                </ul>
             </section>
         </section>
     </body>
