Putting sections in table

--- a/blogpage.html
+++ b/blogpage.html
@@ -1,3 +1,4 @@
+<!-- Before Edit -->
 <!DOCTYPE html>
 <html>
     <head>
@@ -11,7 +12,7 @@
 
         <section class="container">
             <!-- Nutrition and Diet -->
-            <section class="item1">
+            <section class="item">
                 <h2>Nutrition and Diet</h2>
                 <img src="./Assets/nutrition.jpg" alt="Nutrition and Diet">
                 <p>Proper nutrition and a balanced diet are crucial for overall health and wellness. Nutrient-rich foods provide energy, support bodily functions, and boost the immune system, reducing the risk of chronic illnesses. Healthy eating habits also enhance mental clarity, mood, and quality of sleep. By making mindful dietary choices, individuals invest in their long-term well-being, leading to a happier and more vibrant life.</p>
