--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
     <body>
         <header>
             <h1>Healthy Living and Wellness</h1>
+            <img src="./Assets/healthy-lifestyle.jpeg" alt="Healthy Lifestyle" class="headimg">
         </header>
 
         <table>
