Adding navigation bar

--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,16 @@
     <body>
         <header>
             <h1>Healthy Living and Wellness</h1>
+            <nav>
+                <ul>
+                    <li><a href="#nutrition">Nutrition and Diet</a></li>
+                    <li><a href="#fitness">Fitness and Exercise</a></li>
+                    <li><a href="#natural">Natural Remedies</a></li>
+                    <li><a href="#lifestyle">Lifestyle and Wellness</a></li>
+                    <li><a href="#health">Preventive Health</a></li>
+                    <li><a href="#mental">Mental Health and Mindfulness</a></li>
+                </ul>
+            </nav>
             <img src="./Assets/healthy-lifestyle.jpeg" alt="Healthy Lifestyle" class="headimg">
         </header>
 
@@ -14,7 +24,7 @@
             <tr>
                 <td>
                     <!-- Nutrition and Diet -->
-                    <section class="item">
+                    <section class="item" id="nutrition">
                         <h2>Nutrition and Diet</h2>
                         <img src="./Assets/nutrition.jpg" alt="Nutrition and Diet">
                         <p>Proper nutrition and a balanced diet are crucial for overall health and wellness. Nutrient-rich foods provide energy, support bodily functions, and boost the immune system, reducing the risk of chronic illnesses. Healthy eating habits also enhance mental clarity, mood, and quality of sleep. By making mindful dietary choices, individuals invest in their long-term well-being, leading to a happier and more vibrant life.</p>
@@ -23,7 +33,7 @@
             
                 <td>
                     <!-- Fitness and Exercise -->
-                    <section class="item">
+                    <section class="item" id="fitness">
                         <h2>Fitness and Exercise</h2>
                         <img src="./Assets/fitness.png" alt="Fitness and Exercise">
                         <p>Regular exercise is essential for overall health and wellness. It strengthens the body, supports mental health, and reduces the risk of chronic diseases. Exercise boosts mood, improves sleep, and enhances overall quality of life, leading to a more active and fulfilling existence.</p>
@@ -33,7 +43,7 @@
             <tr>
                 <td>
                     <!-- Natural Remedies and Alternative Therapies -->
-                    <section class="item">
+                    <section class="item" id="natural">
                         <h2>Natural Remedies and Alternative Therapies</h2>
                         <img src="./Assets/natural.webp" alt="Natural Remedies and Alternative Therapies">
                         <ul>
@@ -46,7 +56,7 @@
                 </td>
                 <td>
                     <!-- Lifestyle and Wellness -->
-                    <section class="item">
+                    <section class="item" id="lifestyle">
                         <h2>Lifestyle and Wellness</h2>
                         <img src="./Assets/lifestyle.jpeg" alt="Lifestyle and Wellness">
                         <ol>
@@ -62,7 +72,7 @@
             <tr>
                 <td>
                     <!-- Preventive Health -->
-                    <section class="item">
+                    <section class="item" id="health">
                         <h2>Preventive Health</h2>
                         <img src="./Assets/health.jpg" alt="Preventive Health">
                         <p>Preventive health is crucial for a vibrant life. Regular check-ups and healthy habits detect and prevent diseases, ensuring effective treatment. It saves lives, enhances well-being, and promotes longevity, empowering individuals to lead fulfilling, active lives.</p>
@@ -70,7 +80,7 @@
                 </td>
                 <td>
                     <!-- Mental Health and Mindfulness -->
-                    <section class="item">
+                    <section class="item" id="mental">
                         <h2>Mental Health and Mindfulness</h2>
                         <img src="./Assets/mental.jpg" alt="Mental Health and Mindfulness">
                         <p>Mental health and mindfulness are essential for overall well-being. Practicing mindfulness reduces stress and enhances emotional stability. Prioritizing mental health fosters resilience, improves relationships, and leads to a more content and fulfilling life.</p>
