--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
                     <li><a href="#mental">Mental Health and Mindfulness</a></li>
                 </ul>
             </nav>
-            <img src="./Assets/healthy-lifestyle.jpeg" alt="Healthy Lifestyle" class="headimg">
+            <img src="./Assets/healthy-lifestyle.jpeg" alt="Healthy Lifestyle">
         </header>
 
         <table>
@@ -75,4 +75,7 @@
             </tr>
         </table>
     </body>
+    <footer>
+        <p>Take care of your body. Be Safe!</p>
+    </footer>
 </html>
